[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/ft2.png" type="Texture" id=1]
[ext_resource path="res://GoogleSans-Regular-v1.27.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/ft4.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Laser Sprites/12.png" type="Texture" id=4]
[ext_resource path="res://Sprites/ft3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Laser Sprites/11.png" type="Texture" id=7]
[ext_resource path="res://Sprites/arrowLeft.png" type="Texture" id=9]
[ext_resource path="res://Sprites/arrowRight.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Store.gd" type="Script" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.0235294 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.52549, 0.627451, 0.635294, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 20
use_mipmaps = true
use_filter = true
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -241, -219.289 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -214.0
margin_right = 212.0
margin_bottom = 214.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sections" type="Control" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="TextureButton" parent="Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -48.5
margin_right = 140.5
margin_bottom = 48.5
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureButton" parent="Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.5
margin_top = -107.0
margin_right = 84.5
margin_bottom = 107.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -92.5
margin_right = 115.0
margin_bottom = 92.5
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="TextureButton" parent="Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -72.0
margin_right = 124.5
margin_bottom = 72.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="TextureButton" parent="Panel/Sections"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.5
margin_top = -73.0
margin_right = 129.5
margin_bottom = 73.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unlock" type="Button" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -71.0
custom_fonts/font = SubResource( 2 )
text = "Unlock"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="Panel" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right Button" type="TextureButton" parent="Panel/Tabs"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -25.0
margin_bottom = 25.0
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left Button" type="TextureButton" parent="Panel/Tabs"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 50.0
margin_bottom = 25.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="Label" parent="Panel"]
anchor_right = 1.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 4 )
text = "1000 Points"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="Panel"]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Panel/Unlock" to="." method="_on_Unlock_button_down"]
[connection signal="button_down" from="Panel/Tabs/Right Button" to="." method="_on_Right_Button_down"]
[connection signal="button_down" from="Panel/Tabs/Left Button" to="." method="_on_Left_Button_down"]
[connection signal="button_down" from="Panel/Back" to="." method="_on_Back_button_down"]
